--- a/Scss/styles.scss
+++ b/Scss/styles.scss
@@ -1,3 +1,5 @@
+@use "grey_bar"; 
 @use "reset"; 
 
 /*# sourceMappingURL=styles.scss.map */
+// Use "sass --watch Scss/styles.scss:css/styles.css" to compile the code
