--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,61 @@
+.grey_bar {
+  display: flexbox;
+  margin: auto;
+  font-size: 20px;
+}
+
+.grey_bar .horizontal {
+  background-color: #D95F8C;
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+}
+
+.grey_bar .horizontal > li > a {
+  display: block;
+  padding: 15px 20px;
+  color: beige;
+  text-decoration: none;
+}
+
+.grey_bar .horizontal > li:hover {
+  background-color: beige;
+}
+
+.grey_bar .horizontal > li:hover a {
+  color: #D989A6;
+}
+
+.grey_bar .vertical {
+  position: absolute;
+  display: none;
+  list-style: none;
+  width: 200px;
+  background-color: beige;
+}
+
+.grey_bar .vertical > li > a {
+  color: #D989A6;
+}
+
+.grey_bar .horizontal li:hover .vertical {
+  display: block;
+}
+
+.grey_bar .vertical > li:hover {
+  background-color: #D989A6;
+}
+
+.grey_bar .vertical > li:hover a {
+  color: beige;
+}
+
+.grey_bar .vertical li a {
+  display: block;
+  color: white;
+  padding: 15px 15px 15px 20px;
+}
+
 *,
 *:before,
 *:after {
