--- a/css/styles.css
+++ b/css/styles.css
@@ -164,43 +164,127 @@ input {
   border-radius: 0;
 }
 
-.grey_bar-horizontal {
-  list-style: none;
-  display: flexbox;
-  justify-content: space-around;
+header {
+  display: flex;
+  background-color: rgb(217, 95, 140);
+  min-height: 125px;
 }
-
-.grey_bar-horizontal > li > a {
-  display: block;
-  padding: 15px 20px;
-  color: beige;
+header .containerleft {
+  display: flex;
+  background-color: white;
+  align-items: end;
+  padding-bottom: 10px;
+  font-size: xx-large;
+  font-family: Calisto MT;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+header .containeright {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+header .countainer-top {
+  display: flex;
+  color: white;
+  flex-direction: row-reverse;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  padding-top: 10px;
+  padding-right: 20px;
+}
+header .countainer-top ul {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+header .contenedor_A {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+}
+header .contenedor_A ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  font-family: BIZ UDGothic;
+  font-size: xx-large;
+  color: white;
+  padding-bottom: 10px;
+}
+header .contenedor_A ul a {
+  outline: none;
   text-decoration: none;
 }
-
-.grey_bar-horizontal > li:hover {
-  background-color: red;
-}
-
-.grey_bar-vertical {
-  position: absolute;
-  display: none;
-  list-style: none;
-  width: 200px;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.grey_bar-horizontal li:hover .grey_bar-vertical {
-  display: block;
-}
-
-.grey_bar-vertical li:hover {
-  background-color: black;
-}
-
-.grey_bar-vertical li a {
-  display: block;
+header .contenedor_A ul a:visited {
   color: white;
-  padding: 15px 15px 15px 20px;
+}
+header .contenedor_A ul a:hover {
+  border-bottom: 1px solid white;
+}
+header .contenedor_A ul a:active {
+  background: none;
+  color: none;
+}
+header .contenedor_A div {
+  padding-bottom: 10px;
+  gap: 10px;
+  font-family: BIZ UDGothic;
+  font-size: xx-large;
+  color: white;
+  padding-bottom: 10px;
+  display: flex;
+  gap: 10px;
+  padding-right: 35px;
+}
+
+.imagen {
+  background-image: url("https://pbs.twimg.com/media/FWHt_lqWIAAn100?format=jpg&name=4096x4096");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  height: 400px;
+  width: 100vw;
+}
+.imagen section {
+  width: 600px;
+  background-color: black;
+  opacity: 0.8;
+  margin-right: 10%;
+  padding: 20px;
+}
+.imagen section h1 {
+  color: rgb(217, 95, 140);
+  text-align: right;
+  margin: none;
+  padding: none;
+  font-family: Georgia, serif;
+}
+.imagen section h2 {
+  color: white;
+  font-weight: bold;
+}
+.imagen section h3 {
+  font-size: 45px;
+  color: white;
+  font-family: Times, "Times New Roman", Georgia, serif;
+}
+.imagen section h4 {
+  color: white;
+  font-family: Times, "Times New Roman", Georgia, serif;
+}
+.imagen section span {
+  color: white;
+  opacity: 0.3;
+}
+.imagen section p {
+  color: white;
 }
 
 
