--- a/Scss/variables.scss
+++ b/Scss/variables.scss
@@ -1,2 +1,12 @@
-$color_a: rgb(217, 95, 140);
-$color_icons: #98988a;
+// INICIO - COLORES
+$color_a: #D95F8C; //rgb(217, 95, 140);
+$color_b: #D989A6;
+$color_c: #F216CE;
+$color_d: #9C1BBF;
+$color_e: #7AA5BF;
+
+$color_icons:#98988a;
+// FIN - COLORES
+// INICIO - FUENTES
+$fuente_titulos: BIZ UDGothic;
+// FIN - FUENTES
