--- a/Scss/styles.scss
+++ b/Scss/styles.scss
@@ -1,6 +1,7 @@
-@use "grey_bar";
 @use "reset";
 @use "header";
+@use "grey_bar";
 @use "body";
+@use "main_container";
 /*# sourceMappingURL=styles.scss.map */
 // Use "sass --watch Scss/styles.scss:css/styles.css" to compile the code
