--- a/Scss/styles.scss
+++ b/Scss/styles.scss
@@ -3,5 +3,6 @@
 @use "grey_bar";
 @use "body";
 @use "main_container";
+@use "footer";
 /*# sourceMappingURL=styles.scss.map */
 // Use "sass --watch Scss/styles.scss:css/styles.css" to compile the code
